# cvFaceMaker-android

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cvFaceMaker.cpp  native-lib.cpp
app/src/main/cpp/include/dlib/: test_for_odr_violations.h
app/src/main/java/com/gui/cvfacemaker/: JniWarpper.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
